syntax = "proto3";

option csharp_namespace = "TestGrpc";

package Greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (CommonRequest) returns (HelloReply);
  rpc SayBye (CommonRequest) returns (GoodbyeReply);
}

// The request message containing the user's name.
message CommonRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message GoodbyeReply {
	string message = 1;
}